[gd_scene load_steps=5 format=3 uid="uid://5131o4723smh"]

[ext_resource type="Script" path="res://Scenes/player4.gd" id="1_sld7u"]
[ext_resource type="PackedScene" uid="uid://dpjt31ufwtbsy" path="res://Scenes/bellyguy_red.tscn" id="2_t5j7n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_is7qr"]
size = Vector3(1, 0.530205, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_25j7v"]
height = 3.14059
radius = 0.606704

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.223138, 0)
collision_layer = 8
collision_mask = 9
script = ExtResource("1_sld7u")

[node name="Pivot" type="Node3D" parent="."]

[node name="bellyguyRED" parent="Pivot" instance=ExtResource("2_t5j7n")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Hand" type="Marker3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.613148, 1.69481, -0.00150388)

[node name="StaticBody3D" type="StaticBody3D" parent="Pivot"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.613, 1.695, -0.002)
constant_linear_velocity = Vector3(0, -0.04, 0)

[node name="Interaction1" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -2, -5)
collision_mask = 49167

[node name="Interaction2" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -1, -5)
collision_mask = 5

[node name="Interaction3" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -1.5, -5)
collision_mask = 5

[node name="Interaction4" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -3, -5)
collision_mask = 5

[node name="Interaction5" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -5, -5)
collision_mask = 5

[node name="Interaction6" type="RayCast3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.486156, -0.153901)
visible = false
target_position = Vector3(0, -10, -5)
collision_mask = 5

[node name="AntiRotationJoint" type="Generic6DOFJoint3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.613, 1.695, -0.002)
visible = false
node_a = NodePath("../StaticBody3D")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false

[node name="PickUpArea" type="Area3D" parent="Pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.539164, -0.0439229)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pivot/PickUpArea"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0.312349, 0)
shape = SubResource("BoxShape3D_is7qr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.589486, 0, 0, 0, 1, 0.0457406, 0.944485, 0)
shape = SubResource("CylinderShape3D_25j7v")

[node name="WordLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
billboard = 1
text = "word"
font_size = 100
autowrap_mode = 3
width = 700.0

[connection signal="body_entered" from="Pivot/PickUpArea" to="." method="_on_area_3d_body_entered"]
